crates/tm-sparql/tests/snapshots/lower_modifiers__distinct_order_limit.snap
---
source: crates/tm-sparql/tests/lower_modifiers.rs
expression: "ir(\"SELECT DISTINCT ?s WHERE { ?s v:knows ?o } ORDER BY ?s LIMIT 5\")"
---
; Homomorphism Unbound SetOfTriples
(orderLimit [(asc ?s)] :limit 5
  (projectDistinct [?s]
    (triple ?s <urn:tiramemsu:v:knows> ?o :view now)))
