crates/tm-sparql/tests/snapshots/lower_modifiers__group_concat_default_separator.snap
---
source: crates/tm-sparql/tests/lower_modifiers.rs
expression: "ir(\"SELECT (GROUP_CONCAT(?c) AS ?all) WHERE { ?p v:worksAt ?c }\")"
---
; Homomorphism Unbound SetOfTriples
(project [?all]
  (extend ?all ?~a0
    (aggregate [] [(?~a0 group_concat ?c :sep " ")]
      (triple ?p <urn:tiramemsu:v:worksAt> ?c :view now))))
