crates/tm-sparql/tests/snapshots/lower_modifiers__inner_variables_hidden.snap
---
source: crates/tm-sparql/tests/lower_modifiers.rs
expression: "ir(\"SELECT ?a WHERE { { SELECT ?p WHERE { ?p v:age ?a } } }\")"
---
; Homomorphism Unbound SetOfTriples
(project [?a]
  (project [?p]
    (triple ?p <urn:tiramemsu:v:age> ?a :view now)))
