crates/tm-sparql/tests/snapshots/lower_modifiers__inverse_path.snap
---
source: crates/tm-sparql/tests/lower_modifiers.rs
expression: "ir(\"SELECT ?p WHERE { v:acme ^v:worksAt ?p }\")"
---
; Homomorphism Unbound SetOfTriples
(project [?p]
  (triple ?p <urn:tiramemsu:v:worksAt> <urn:tiramemsu:v:acme> :view now))
