crates/tm-sparql/tests/snapshots/lower_modifiers__order_by_hidden_variable.snap
---
source: crates/tm-sparql/tests/lower_modifiers.rs
expression: "ir(\"SELECT ?p WHERE { ?p v:age ?a } ORDER BY ?a\")"
---
; Homomorphism Unbound SetOfTriples
(project [?p]
  (orderLimit [(asc ?a)]
    (triple ?p <urn:tiramemsu:v:age> ?a :view now)))
